tests/algorithms/x/C/maths/euler_method.c
// Generated by Mochi 0.10.32 on 2025-08-11 22:22 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t explicit_euler_len;

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long ceil_int(double x);
double * explicit_euler(double(*ode_func)(double, double), double y0, double x0, double step_size, double x_end);
double abs_float(double a);
void test_explicit_euler();
double f(double x, double y);
void user_main();
double f(double x, double y);
int main(void);

long long ceil_int(double x) {
    long long n = (int)(x);
    if ((double)(n) < x) {
        n = n + 1LL;
    }
    return n;
}

double * explicit_euler(double(*ode_func)(double, double), double y0, double x0, double step_size, double x_end) {
    long long n = ceil_int((x_end - x0) / step_size);
    double *y = NULL;
    size_t y_len = 0;
    long long i = 0LL;
    while (i <= n) {
        y = list_append_long_long(y, &y_len, 0.0);
        i = i + 1LL;
    }
    y[(int)(0LL)] = y0;
    double x = x0;
    long long k = 0LL;
    while (k < n) {
        y[(int)(k + 1LL)] = y[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? y_len + _mochi_idx : _mochi_idx;})] + (step_size * ode_func(x, y[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? y_len + _mochi_idx : _mochi_idx;})]));
        x = x + step_size;
        k = k + 1LL;
    }
    return explicit_euler_len = y_len, y;
}

double abs_float(double a) {
    if (a < 0.0) {
        return -(a);
    }
    return a;
}

void test_explicit_euler() {
    double *ys = explicit_euler(f, 1.0, 0.0, 0.01, 5.0);
    size_t ys_len = explicit_euler_len;
    double last = ys[(int)({long long _mochi_idx = ys_len - 1LL; _mochi_idx < 0 ? ys_len + _mochi_idx : _mochi_idx;})];
    if (abs_float(last - 144.77277243257308) > 0.001) {
        panic("explicit_euler failed");
    }
}

double f(double x, double y) {
    return y;
}

void user_main() {
    test_explicit_euler();
    double *ys = explicit_euler(f, 1.0, 0.0, 0.01, 5.0);
    size_t ys_len = explicit_euler_len;
    printf("%g\n", ys[(int)({long long _mochi_idx = ys_len - 1LL; _mochi_idx < 0 ? ys_len + _mochi_idx : _mochi_idx;})]);
}

double f(double x, double y) {
    return y;
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
